CHANGES.txt - 07/12/2003
------------------------

CHANGES IN CUPS V1.1.20rc1

	- The scheduler no longer calls malloc and free from the
	  signal handlers (STR #190)
	- The USB backend now uses the manufacturer and model
	  strings if the description string is not available
	  (STR #174)
	- The ppdOpen functions still supported the
	  VariablePaperSize attribute, which was removed in v4.0
	  of the PPD spec.  This caused problems with PPD files
	  that relocated the PageSize option to a non-standard
	  group (STR #158)
	- The cups.list file referenced MAN1EXT, MAN3EXT, and
	  MAN5EXT, but none of those were actually defined (STR
	  #147)
	- Chunked requests could cause a Denial of Service if
	  the connection is terminated before the first byte of
	  chunk data is sent/received (STR #143)
	- Printers with special characters in their names were
	  not accessible from the web interface (STR #120)
	- The lpstat command now shows the correct interface
	  script or PPD file, if any, for a print queue (STR #89)
	- The lpstat command now shows the printer-state-message
	  and printer-state-reasons attributes whenever they are
	  not blank (STR #152)
	- The French and German option-conflict.tmpl template
	  files did not get installed (STR #148)
	- The cups.list.in file did not work when compiling
	  without shared libraries (STR #149)
	- The DSOFLAGS included the LDFLAGS, which causes
	  problems on at least HP-UX (STR #150)
	- The fax printer support did not keep track of the fax
	  capability bit (STR #144)
	- The appleLangDefault() function could leak a small
	  amount of memory (STR #145)
	- The ppdOpen() functions now mirror all normal
	  attributes to the attribute list; previously only
	  certain unassigned attributes would be added (STR
	  #139)
	- The ppdEmitJCL() function wrote JCL commands to stdout
	  instead of the passed file pointer (STR #142)
	- The httpGets() function could, in certain states,
	  block waiting for data (STR #132)