@@ -1,5 +1,5 @@
 /*
- * "$Id: client.c,v 1.160 2003/05/09 16:10:22 mike Exp $"
+ * "$Id: client.c,v 1.161 2003/07/19 21:37:19 mike Exp $"
  *
  *   Client routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -3156,6 +3156,9 @@ pipe_command(client_t *con,		/* I - Client connection */
       if (setgid(Group))
         exit(errno);
 
+      if (setgroups(0, NULL))
+        exit(errno);
+
       if (setuid(User))
         exit(errno);
     }
@@ -3309,5 +3312,5 @@ CDSAWriteFunc(SSLConnectionRef connection,	/* I  - SSL/TLS connection */
 
 
 /*
- * End of "$Id: client.c,v 1.160 2003/05/09 16:10:22 mike Exp $".
+ * End of "$Id: client.c,v 1.161 2003/07/19 21:37:19 mike Exp $".
  */
