@@ -1,5 +1,5 @@
 /*
- * "$Id: job.c,v 1.212 2003/06/11 23:16:41 mike Exp $"
+ * "$Id: job.c,v 1.213 2003/07/19 21:37:19 mike Exp $"
  *
  *   Job management routines for the Common UNIX Printing System (CUPS).
  *
@@ -2582,6 +2582,9 @@ start_process(const char *command,	/* I - Full path to command */
       if (setgid(Group))
         exit(errno);
 
+      if (setgroups(0, NULL))
+        exit(errno);
+
       if (setuid(User))
         exit(errno);
     }
@@ -2649,5 +2652,5 @@ start_process(const char *command,	/* I - Full path to command */
 
 
 /*
- * End of "$Id: job.c,v 1.212 2003/06/11 23:16:41 mike Exp $".
+ * End of "$Id: job.c,v 1.213 2003/07/19 21:37:19 mike Exp $".
  */
