@@ -3,6 +3,8 @@ CHANGES.txt - 07/12/2003
 
 CHANGES IN CUPS V1.1.20rc1
 
+	- The scheduler did not reset the group list when
+	  running CGI and filter processes (STR #185)
 	- The scheduler no longer calls malloc and free from the
 	  signal handlers (STR #190)
 	- The USB backend now uses the manufacturer and model
